--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Qustin Blog</title>
+        <title>d(q)ustin ma</title>
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <link rel="stylesheet" href="./styles.css">
         <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 16 16%27%3E%3Ccircle cx=%278%27 cy=%278%27 r=%278%27 fill=%27%23b9fbc0%27/%3E%3C/svg%3E">
@@ -12,7 +12,7 @@
         <div class="frost" aria-hidden="true"></div>
         <header class="container">
             <a href="#" class="site-title">
-                my freaking portfolio ✨
+                I couldn't afford dustin.com so I bought qustin.com ✨
             </a>
             <nav>
                 <a href="#posts">posts</a>
